# labs_2_course

./: README.md  Лист_задания_Лавшук.docx
Test/: meson.build
АиСД/L1/: CMakeLists.txt  main.cpp
АиСД/L10/: CMakeLists.txt  main.cpp
АиСД/L2/: main.cpp  meson.build
АиСД/L3/: main.cpp  meson.build
АиСД/L4/: main.cpp  meson.build
АиСД/L5/: CMakeLists.txt  main.cpp
АиСД/L6/: CMakeLists.txt  huffman.cpp  huffman.h  main.cpp
АиСД/L7/: CMakeLists.txt  main.cpp  Семестр 2. Лекция 7 2025.pptx
АиСД/L8/: CMakeLists.txt  main.cpp
АиСД/L9/: CMakeLists.txt  answers.md  index.html  main.cpp  questions.md  task.md
БД/: .~lock.БД_Практикум.doc#
ДПИ/: .~lock.Лабораторная работа №1.docx#
ДПИ/L1/: ДПИ Лаба 1.fig
ДПИ/L2/: lab.md
ДПИ/L3/: lab.md
ДПИ/L4/: .~lock.Лабораторная работа №4_ПОИТ.docx#  task.md
КПО/SE_Lab16/: main.cpp  meson.build
КПО/SE_Lab17/: main.cpp  meson.build
КПО/SE_Lab17/Modules/Headers/: FST.h  IT.h  In.h  LT.h  Lexer.h  Log.h  Out.h
КПО/SE_Lab17/Modules/Source/: Error.cpp  IT.cpp  In.cpp  LT.cpp  Lexer.cpp  Log.cpp  Out.cpp  Parm.cpp
КПО/SE_Lab18/: SourceCode in cpp.txt  main.cpp  meson.build
КПО/SE_Lab18/Modules/Headers/: Error.h  GRB.h  IT.h  In.h  LT.h  Mfst.h  Rule.h
КПО/SE_Lab18/Modules/Source/: Error.cpp  GRB.cpp  In.cpp  Lexer.cpp  Log.cpp  Mfst.cpp
КПО/SE_Lab19/: hello  hello.asm  l19-2.asm  l19-3  l19-4  l19.3.asm  out.out
КПО/SE_Lab20/: hello.in  hello.in.out  l20  main.cpp  meson.build  task.md
КПО/SE_Lab21/: l21
КСиС/: Laboratornaya_rabota_1.docx  Лабораторная работа №5.docx
КСиС/L4/: L4.pkt  L4_switch.pkt
КСиС/L5/: L5.pkt
КСиС/L6/: L6.pkt
КСиС/L7/: L5.pkt
КСиС/L8/: laba8-2.pkt  laba8-3.pkt  laba8-33.pkt  laba8-4.pkt  laba8-5.pkt
Курсовой проект/LSA_2025/: meson.build  specs.md  test_input.in.out  todo.md
Курсовой проект/Документация/: Задание на курсовой проект_ЛАВШУК.docx  Пояснительная записка ЛАВШУК.docx  Титульный лист_Лавшук.docx
МатПрог/L1/: .~lock.L1 отчет.odt#  Auxil.h  (+6 more)
ТерВер/: L1.xlsx  L2.xlsx  L3.ods  L3.xlsx  lab_02_25.xlsx
(+381 files in other folders)
